--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "tabWidth": 2
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
+    "@graphql-codegen/cli": "^3.0.0",
     "clsx": "^1.2.1",
+    "graphql": "^16.6.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -49,9 +52,8 @@
     "@typescript-eslint/eslint-plugin": "5.50.0",
     "@typescript-eslint/parser": "5.50.0",
     "autoprefixer": "10.4.13",
-    "eslint": "8.28.0",
-    "eslint-config-next": "13.1.6",
     "eslint": "8.32.0",
+    "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-import-access": "1.0.1",
     "eslint-plugin-simple-import-sort": "8.0.0",
