--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "codegen": "graphql-codegen --watch",
     "clean": "rimraf .next out",
     "build": "next build",
     "export": "next export",
@@ -43,6 +44,8 @@
     "recoil": "0.7.6"
   },
   "devDependencies": {
+    "@graphql-codegen/client-preset": "^2.0.0",
+    "@graphql-codegen/import-types-preset": "^2.2.6",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.8",
@@ -68,7 +71,8 @@
     "react-error-boundary": "3.1.4",
     "rimraf": "3.0.2",
     "tailwindcss": "3.2.4",
-    "typescript": "4.9.4"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
