--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "0.7.6"
+    "react-hook-form": "^7.43.2",
+    "recoil": "0.7.6",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/import-types-preset": "^2.2.6",
+    "@hookform/resolvers": "^2.9.11",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
     "@tailwindcss/typography": "0.5.8",
