--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "recoil": "0.7.6",
+    "tailwind-merge": "^1.10.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
