--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@/graphql/*": ["./src/graphql/*"],
       "@/config/*": ["./src/config/*"],
       "@/lib/*": ["./src/lib/*"],
+      "@/utils/*": ["./src/utils/*"],
       "@/styles/*": ["./src/styles/*"],
       "@/public/*": ["./public/*"]
     },
