--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/import-types-preset": "^2.2.6",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@hookform/resolvers": "^2.9.11",
     "@tailwindcss/forms": "0.5.3",
     "@tailwindcss/line-clamp": "0.4.2",
